# ift611

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  test.cpp  test.txt
RAM/: Afficheur.cpp  Afficheur.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  ProjetDeSession.sln  ProjetDeSession.vcxproj  RamReader.cpp  RamReader.h  main.cpp
setup/: install-dependency.sh
src/: CMakeLists.txt  SystemRessource.cpp  SystemRessource.h
src/backend/: MySystemInfo.cpp  MySystemInfo.h  SystemRessource.cpp  SystemRessource.h  WriteFile.cpp  WriteFile.h  file_write.cpp  file_write.h
src/frontend/: .window.cpp.swp  Affichage.cpp  Affichage.h  application.cpp  application.h  chart.cpp  chart.h  labelclic.cpp  labelclic.h  renderArea.cpp  renderArea.h  updateManager.cpp  updateManager.h  window.cpp  window.h
